WereViewApp/Content/Less/front-developer.less
@import "fonts-rimixens.less";

body {
    font-family: Ubuntu,"Helvetica Neue", Helvetica, Arial, sans-serif;
    -webkit-font-smoothing: subpixel-antialiased;
}
 
body #wrap .app-details-page {
    .ubuntu-font;
}


.regular-color {
    color: @regular-font-color;
}

.primary-color {
    color: @primary-color;
}
// other imports
//@import "seo-optimize.less";
//bootstrap overrides
.btn {
    font-weight: normal;
    text-transform: none;
    .padding(7px, 12px, 7px,12px);
}



.btn-default {
    color: white;
}

.btn-default:hover {
    color: #333;
}

.btn-warning:hover {
    background-color: #E7711C;
}

.btn-info:hover {
    background-color: rgb(75, 112, 126);
}

.btn-primary, .btn-default {
    background-color: #ff7200;
}

.btn-success {
    background-color: #19c234;
}

.input-group-addon:not(:first-child):not(:last-child), .input-group-btn:not(:first-child):not(:last-child), .input-group .form-control:not(:first-child):not(:last-child) {
    border-radius: 5px;
}

.form-control {
    .height(34.4px);
}

.input-group {
    input {
        .height(34.4px);
    }
}

.input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group {
    margin-left: 0;
}

.input-group-btn {
    .btn {
        margin-left: 0;
    }
}


label.control-label {
    .ubuntu-font;
    .font-size(14px);
}

//error pages start
.custom-error-page {
    p, div {
        text-align: justify;
    }
}

.error-content {
}
//error pages end
.rating-disabled {
    cursor: default;
}

.display-table {
    display: table;
}

.table-hover > tbody > tr:hover {
    //background-color: orange;
    //color: white;
    background-color: #e5f7fc;
    color: #1a1a1a;

    a {
        // color: inherit;
    }
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

.center-margin {
    margin: 0 auto;
}

.clear {
    clear: both;
}


.orange-color {
    color: orange;
}



.apps-list {
    .margin-top(10px);
}

.apps-list-header-row {
    .ubuntu-font;

    .title {
        h1 {
            .margin(0px, 0px, 10px, 5px);
            color: red;
            .font-size(23px);
        }

        strong {
            font-weight: normal;
        }
    }

    .float-right.btn {
        .margin(0px,5px,0px,0px);
    }
}

.btn {
    border: none;
}

.paragraph-end {
    height: 19px;
    width: 45px;
    background-image: -webkit-gradient(linear,left top,right top,color-stop(0%,rgba(255,255,255,0)),color-stop(100%,rgba(255,255,255,1)));
    background-image: -webkit-linear-gradient(left,rgba(255,255,255,0),rgba(255,255,255,1));
    background: linear-gradient(to right,rgba(255,255,255,0),rgba(255,255,255,1));
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1,StartColorStr='#00ffffff',EndColorStr='#ffffff');
    bottom: 0;
    .right(-8px);
    max-height: 100%;
    position: absolute;
}
//app-box config
.app-box {
    display: block;
    .padding-top(10px);
    .margin(5px);
    background-color: #FFFFFF;
    //.rounded(3px);
    text-align: center;
    .height(196px);
    line-height: 1;
    //border: 2px solid @app-box-background-color;
    border: 2px solid #EAEAEA;
    .width(147px);
    .border-rounded(4px);
    /*position:relative;*/
    //min-width: 157px;
    //width: 170px;
    .app-icon {
        .height(115px);
        .width(122px);
        .border-rounded(3.5px);
    }

    .app-description-wrapper {
        background-color: white;
        .height(62px);
        width: 100%;
        .margin-top(5px);
    }

    .app-title-container {
        //.padding(5px,0px,7px,12px);
        text-align: center;
        .min-width(@app-container-width);
        width: 87%;
        position: relative;
        margin: 0 auto;
        .padding-top(4px);
    }

    .app-title-row {
        width: 100%;
        .min-width(@app-container-width);
        position: relative;
    }

    .star-rating {
        font-size: 1em;
        //position: absolute;
        //.top(172px);
        //.left(16px);
        //text-align: center;
        cursor: pointer;
    }

    .rating-container {
        color: #909090;
    }



    .rating-stars {
        color: @rating-color;
    }

    .app-title {
        .min-width(@app-title-width);
        width: 100%;
        //.height(12px);
        overflow: hidden;
        //color: black;
        color: #919191;
        .font-size(12px);
        .margin(0px,0px,0px,1px);
        //font-weight: bold;
        //text-align: left;
        display: inline-block;
        -webkit-font-smoothing: antialiased;
        white-space: nowrap;
        position: relative;
        .height(14px);

        strong {
            font-weight: normal;
        }

        em {
            font-style: normal;
        }
    }

    .fa {
        .font-size(1.2em);
    }

    .fa-apple {
        color: gray;
    }

    .published-by {
        //position: absolute;
        //.top(155px);
        width: 100%;
        .min-width(@app-container-width);
        color: @published-by-color;
        .font-size(13px);
        white-space: nowrap;
        overflow: hidden;
        position: relative;
        //text-align: left;
    }
}

//app-box hover
.app-box:hover {
    background-color: #CACACA;
    border-bottom: 2px solid red;

    .app-title {
        //color: red;
        color: black;
    }

    .paragraph-end {
        background: none;
    }

    .published-by {
        //color: deepskyblue;
    }
}




.tp-caption {
    .large_bold_grey {
        font-size: 31px;
    }
}
/* ... */

